fix tag (no space are allowed)

--- a/02_R.Rmd
+++ b/02_R.Rmd
@@ -1,6 +1,6 @@
 # (PART) R & RStudio {-}
 
-# R & RStudio {#R & RStudio}
+# R & RStudio {#R_and_Studio}
 \index{R and RStudio} 
 
 In this chapter, you will learn how to install and use two programs that are indispensable for the management and analysis of EMA data: R and RStudio. 
