--- a/13_aph-catalogue_lisa.Rmd
+++ b/13_aph-catalogue_lisa.Rmd
@@ -5,10 +5,9 @@ output:
 ---
 # (PART) EMA Catalogue {-}
 
+This chapter summarises ongoing EMA research projects within the APH mental health consortium, as a guide to other researchers looking for nearby EMA-expertise and research collaboration.  
 
 # EMA research within APH {#catalogue}
-
-This chapter summarises ongoing EMA research projects within the APH mental health consortium, as a guide to other researchers looking for nearby EMA-expertise and research collaboration.  
 
 Table: (\#tab:APHresearch) Overview of APH EMA research groups.
 
@@ -44,6 +43,32 @@ Table: (\#tab:APHresearch) Overview of APH EMA research groups.
 | **Ambulant Monitoring** |  | | VU |
 | De Geus group         | VU-AMS | vu-ams.nl            |                  |
 
+
+#| Name           | Focus            | URL                  | Organisation        |
+#|:---------------|:-----------------|:---------------------|:--------------------|
+#| Bockting group  | Depression    | claudibockting.com     | AMC               |
+#|  |Imagine your mood study[Protocol](https://www.sciencedirect.com/science/article/pii/S2451865417300376) |  |
+#|| Stay Fine Study |http://stayfine.nl ||
+#| CASPAR         | Suicide          | ilumivu.com          | VU                  |
+#| Chronic Fatigue| Chronic Fatigue  | ---                  | AMC                 |
+#| FAntasTIGUE    | Fatigue          | tinyurl.com/ybb7up87 | AMC                 |
+#| van der Gaag group |  Psychotic symptoms  |               | VU                  |
+#| TEMSTEM        | Auditory hallucinations        | tinyurl.com/ybac6flo | VU                  |
+#| VRETp      | Psychotic disorders        | psymate.eu | VU  
+#| Huibers group | Depression        | ---                   | VU                  |
+#| IMPACT         | Heart failure    | impactonderzoek.nl   | AMC                 |
+#| MERITS          | Type 1 diabetes       | -            | VuMC  |
+#| Moodbuster/ E-COMPARED     | Depression       | ict4depression.eu    | VU     |
+#| NESDA          | Depression       | nesda.nl             | VuMC / GGz InGeest  |
+#| Psychosystems  | Symptom Networks | psychosystems.org    | UvA                 |
+#| RADAR-CNS      | Depression       | radar-cns.org        | VuMC / Ggz InGeest  |
+#                |
+#| van Someren group | Sleep       | #https://herseninstituut.nl/onderzoek/onderzoeksgroepen/van-someren-groep/ | AMC |
+#| VU-AMS         | Stress & emotion | vu-ams.nl            | VU                  |
+#| | |
+#| | |
+#| | |
+#| | | 
 
 ## The Bockting group
 \index{Bockting}
